static/scss/answers/overlay/base.scss
@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

@keyframes fadeOut {
  from { opacity: 1; }
  to { opacity: 0; }
}

.Overlay {
  background-color: transparent !important; // This MUST be true for the overlay
  -ms-overflow-style: none; /* For IE11 */

  .yxt-SearchBar-container {
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  }

  .AnswersPage {
    height: 100%;
    animation: fadeIn 0.4s;
    animation-delay: .15s;
    animation-fill-mode: backwards;
  }

  .Answers-overlaySuggestions {
    margin: var(--yxt-base-spacing);

    .hidden {
      display: none;
    }
  }

  &.shorter .Answers {
    min-height: 0px;

    &-footer {
      display: none;
    }

    &-navWrapper {
      padding-top: 0;
      background-color: transparent;
      margin-top: -26px;
      border: none;
    }

    &-nav {
      display: none;
    }

    &-resultsWrapper {
      display: none;
    }
  }

  &.taller {
    .Answers-overlaySuggestions {
      display: none;
    }
  }

  &.collapsed {
    overflow: hidden;

    .AnswersPage {
      animation: fadeOut 0.4s;
      animation-fill-mode: forwards;
    }
  }
}

